css/screen.css
@font-face { font-family: "Chunk"; src: local("☺"), url('/fonts/Chunk.otf') format('opentype'), url('/fonts/Chunk.ttf') format('truetype'); }

/* Global Reset */

* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
}

body {
  background-color: white;
  background-image: url('/images/background.png');
  font: 14px helvetica, arial, clean, sans-serif;
  *font-size: small;
  text-align: center;
}

h1, h2 {
  text-shadow: 0px 1px 0px rgba(255,255,255,0.6);
}

h1 {
  margin-bottom: 1em;
  font-family: Chunk, helvetica, ariel, sans-serif;
}

p {
  margin: 1em 0;
}

a {
  color: #00a;
  text-decoration: none;
}

a:hover {
  color: #F74;
}

a:visited {
  color: #00a;
}

[data-icon]:before {
  font-family: 'Pictos Custom';
  -webkit-font-smoothing: antialiased;
  content: attr(data-icon) ;
  font-size: 1.4em;
}

table {
  font-size: inherit;
  font: 100%;
}

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

  ul.posts li {
    line-height: 1.75em;
  }

  ul.posts span {
    float: right;
    color: #aaa;
    font-family: Monaco, "Courier New", monospace;
    font-size: 80%;
  }

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 110%;
  text-align: justify;
  width: 40em;
  margin: 3em auto 2em auto;
  line-height: 1.5em;
}

.title {
  color: #F70;
  font-weight: bold;
  margin-bottom: 2em;
  font-size: 1.5em;
  font-weight: bold;
  font-family: Chunk, helvetica, ariel, sans-serif;
  text-shadow: lightgray 0px 1px 0px;
}

  .site .title a {
    color: #f70;
    text-decoration: none;
  }

  .site .title a:hover {
    color: black;
  }

  .site .title a.extra {
    color: #aaa;
    text-decoration: none;
    margin-left: 1em;
  }

  .site .title a.extra:hover {
    color: black;
  }

  .site .meta {
    color: #aaa;
  }

  .site .footer {
    font-size: 80%;
    color: #666;
    border-top: 4px solid #eee;
    margin-top: 2em;
    overflow: hidden;
  }

    .site .footer .contact {
      float: left;
      margin-right: 3em;
    }

      .site .footer .contact a {
        color: #8085C1;
      }

    .site .footer .rss {
      margin-top: 1.1em;
      float: right;
    }

      .site .footer .rss img {
        border: 0;
      }

/*****************************************************************/
/*
/* Posts
/*
/*****************************************************************/

#post {

}

  /* standard */

  #post pre {
    border: 1px solid #ddd;
    background-color: #eef;
    padding: 0 .4em;
  }

  #post ul,
  #post ol {
    margin-left: 1.35em;
  }

  #post code {
    border: 1px solid #ddd;
    background-color: #eef;
    font-size: 85%;
    padding: 0 .2em;
  }

    #post pre code {
      border: none;
    }

  /* terminal */

  #post pre.terminal {
    border: 1px solid black;
    background-color: #333;
    color: white;
  }

  #post pre.terminal code {
    background-color: #333;
  }

#related {
  margin-top: 2em;
}

  #related h2 {
    margin-bottom: 1em;
  }

/*****************************************************************/
/*
/* Talks
/*
/*****************************************************************/


.content.talks h1, .content.talks h2 {
  margin-top: 1em;
}

.content.talks h1:before {
  content: 'm ';
  font-family: 'Pictos Custom';
  -webkit-font-smoothing: antialiased;
  text-shadow: 0px 1px 0px white;
  font-style: normal;
}

.content.talks ul {
  list-style: none;
}

.content.talks ul li strong {
  font-family: 'Pictos Custom';
  -webkit-font-smoothing: antialiased;
  text-shadow: 0px 1px 0px white;
  font-style: normal;
  font-size: 2em;
}

